--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ body {
     background-color: var(--main-bg-color);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Cg fill='%23eeeef7' fill-opacity='0.28'%3E%3Cpath d='M12 0h18v6h6v6h6v18h-6v6h-6v6H12v-6H6v-6H0V12h6V6h6V0zm12 6h-6v6h-6v6H6v6h6v6h6v6h6v-6h6v-6h6v-6h-6v-6h-6V6zm-6 12h6v6h-6v-6zm24 24h6v6h-6v-6z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
     margin: 0px;
+    line-height: 1.7em;
 }
 
 header.primary {
@@ -102,6 +103,10 @@ h2 {
     margin: 30px auto;
     padding: 10px 30px;
     max-width: 800px;
+}
+
+.container ol li {
+    font-weight: bold;
 }
 
 
