--- a/hocotts/assets/css/style.css
+++ b/hocotts/assets/css/style.css
@@ -34,6 +34,11 @@ html {
   margin: 0px;
  }
 
+ a {
+  color: var(--body-text);
+}
+
+
  h1,h2,h3,h4 {
   font-family: domine;
  }
@@ -107,6 +112,20 @@ img {
     max-width: 1000px;
 }
 
+.cta-button {
+  color: var(--body-text-inverse);
+  text-decoration: none;
+  background: var(--dark-bg);
+  padding: 1em;
+  margin-top: 10px;
+}
+
+.cta-button a:hover {
+  background: var(--dark-bg-opacity);
+  color: var(--body-text-inverse);
+  text-decoration: none;
+}
+
 .img-right{
     float:right;
     margin: 10px 0 10px 20px;
@@ -125,17 +144,6 @@ img {
     margin: 20px auto;
     padding: 5px;
 }
-
-a {
-  text-decoration: none;
-  color: var(--body-text);
-}
-
-a:hover {
-  color: var(--body-text);
-  text-decoration: underline;
-}
-
 
    /*
  * Hide visually and from screen readers
@@ -210,13 +218,18 @@ a:hover {
   clear: both;
 }
 
+.two-col-grid {
+  display: grid;
+  margin-bottom: 30px;
+}
+
 .three-col-grid {
   display: grid;
   margin-bottom: 30px;
 }
 
-
 /* #endregion utility */
+
 
 /* #region main css------*/
 
@@ -365,17 +378,6 @@ header.primary h1 a {
   max-width: 90%;
 }
 
-#cta-section a {
-  color: var(--body-text-inverse);
-  text-decoration: none;
-  background: var(--dark-bg);
-  padding: 1em;
-  margin: 10px;
-}
-
-#cta-section a:hover {
-  background: var(--dark-bg-opacity);
-}
 
 #cta-section h2 {
   font-size: 2.2em;
@@ -478,6 +480,10 @@ footer a {
 }
 
 @media (min-width: 768px) {
+  
+  .two-col-grid {
+    grid-template-columns: 1fr 1fr;
+  }
   
   .three-col-grid {
     display: grid;
