added reflection content and css grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
     --primary-link-color: #1c3a5a;
     --accent-color: #45bac4;
     --accent-color-rgb: rgba(69, 186, 196, 0.324);
+    --footer-color: #3c486a;
 }
 
 html{
@@ -23,13 +24,29 @@ html{
     box-sizing: inherit;
   }
 
+  /* #region utility ------ */
+
+  .container {
+    background-color: var(--main-container-color);
+    width: 80vw;
+    margin: 30px auto;
+    padding: 10px 30px;
+    max-width: 800px;
+}
+
+.container ol li {
+    font-weight: bold;
+}
+
   /* ---------responsive images--------- */
 
 img {
     max-width:100%;
 }
 
-/* ---------global styles--------- */
+/* #endregion utility--------------- */
+
+/* #region global--------- */
 body {
     font-family: 'Merriweather', serif;
     font-weight: 300;
@@ -39,6 +56,23 @@ body {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Cg fill='%23eeeef7' fill-opacity='0.28'%3E%3Cpath d='M12 0h18v6h6v6h6v18h-6v6h-6v6H12v-6H6v-6H0V12h6V6h6V0zm12 6h-6v6h-6v6H6v6h6v6h6v6h6v-6h6v-6h6v-6h-6v-6h-6V6zm-6 12h6v6h-6v-6zm24 24h6v6h-6v-6z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
     margin: 0px;
     line-height: 1.7em;
+}
+
+h2 {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.7em;
+    color: var(--subheader-color);
+    
+}
+
+/* #region main css -------- */
+
+main {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    margin: auto;
+    gap: 20px;
+    padding: 20px;
 }
 
 header.primary {
@@ -54,6 +88,8 @@ header.primary {
     position: relative;
     padding-top: 10px;
     background-color: #000;
+    grid-column: 1 / 13;
+    grid-row: 1 / 2;
 }
 
 header.primary::before {
@@ -90,23 +126,16 @@ header.primary h2 {
 }
 
 
-h2 {
-    font-family: 'Work Sans', sans-serif;
-    font-size: 1.7em;
-    color: var(--subheader-color);
-    
+footer.primary {
+    background: var(--footer-color);
+    color: var(--subheader-color-inverse);
+    padding: 2em;
+    text-align: center;
 }
 
-.container {
-    background-color: var(--main-container-color);
-    width: 80vw;
-    margin: 30px auto;
-    padding: 10px 30px;
-    max-width: 800px;
-}
-
-.container ol li {
-    font-weight: bold;
+footer.primary a {
+    text-decoration: none;
+    color: var(--subheader-color-inverse);
 }
 
 
@@ -117,6 +146,25 @@ h2 {
     header.primary{
       height: 90vh;
     }
+
+    #content{
+        display: grid;
+        grid-column: 2 / 12;
+        grid-row: 2 / 3;
+        grid-template-columns: subgrid;
+        grid-template-rows: subgrid;
+        gap: 1em;
+    }
+
+    #project-reflection {
+        grid-column: 7 / 13;
+        grid-row: 2 / 3;
+    }
+
+    #course-reflection {
+        grid-column: 1 / 6;
+        grid-row: 2 / 3;
+    }
 }
 
 @media screen and (min-width:1400px){
@@ -124,6 +172,8 @@ h2 {
     header.primary{
       height: 80vh;
     }
+
+   
 }
 
 
