--- a/hocotts/assets/css/style.css
+++ b/hocotts/assets/css/style.css
@@ -241,6 +241,16 @@ img {
     max-width: 100%;
 }
 
+div.social img{
+  width: 45px;
+  margin: 30px auto;
+  text-align: center;
+}
+
+div.social a::after{
+  content: "";
+}
+
 /* #endregion utility */
 
 
