--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,13 @@ h2 {
     font-weight: bold;
     font-size: 1.3em;
     }
+
+    a:hover {
+        text-decoration: none;
+      }
+      
+/* #endregion global--------------- */
+
 /* #region main css -------- */
 
 main {
