--- a/hocotts/assets/css/style.css
+++ b/hocotts/assets/css/style.css
@@ -346,7 +346,7 @@ header.primary h1 a {
 .menu-toggle {
   padding: 1em;
   position: absolute;
-  top: .5em;
+  top: 2.5em;
   right: .5em;
   cursor: pointer;
 }
@@ -358,7 +358,7 @@ header.primary h1 a {
   display: block;
   background: #215202;
   height: 3px;
-  width: 1.75em;
+  width: 2.5em;
   border-radius: 3px;
   transition: all ease-in-out 500ms;
   color: #e6e5e0;
